# django-access-manager

./: .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  params.json  runtests.py  setup.cfg  setup.py  test-requirements.txt  test_requirements.txt  test_settings.py
access/: decorators.py  factories.py  requirements.py  views.py
access/tests/: test_decorators.py  test_requirements.py  test_views.py  utils.py
access_manager/: decorators.py  requirements.py  test_requirements.py  test_views.py
access_manager/tests/: test_decorators.py  test_requirements.py  test_views.py  utils.py
