[metadata]
name = django-access-tools
version = attr: access.__version__
author = Anton Agestam
author_email = git@antonagestam.se
url = https://antonagestam.github.io/django-access-tools
classifiers=
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: Software Development
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable
description = An abstract access manager for Django.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
include_package_data = True
packages = find:
install_requires =
    Django>=2.2
python_requires = >=3.6

[options.extras_require]
test = factory-boy<3; flake8<4; coveralls<2; black

[bdist_wheel]
universal = true

[flake8]
max-line-length = 88
max-complexity = 10
